force-app/main/default/objects/Form_Template_Data__c/Form_Template_Data__c.object-meta.xml
<CustomObject>
    <description>Form Template Data stores all the macros chosen on the forms. This object stores the transactional data of the macros.</description>
    <label>Form Template Data</label>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>Form Template Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Template Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>