force-app/main/default/objects/Form_Template_Data__c/fields/Form_Data_Description__c.field-meta.xml
<CustomField>
    <fullName>Form_Data_Description__c</fullName>
    <label>Form Data Description</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>