force-app/main/default/objects/Form_Template_Data__c/fields/Section_Number__c.field-meta.xml
<CustomField>
    <fullName>Section_Number__c</fullName>
    <label>Section Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>