force-app/main/default/objects/Form_Template_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Macro</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>